# robocup_1

./: README.md
src/control_pkg/: package.xml  setup.py
src/control_pkg/control_pkg/: master_node.py  master_node2.py  master_node3.py  master_node5.py  robot_node.py
src/hardware_pkg/: package.xml  setup.cfg  setup.py
src/hardware_pkg/hardware_pkg/: gripper_node.py
src/srvs_pkg/: CMakeLists.txt  package.xml
src/srvs_pkg/srv/: GetTargetPose.srv
src/vision_pkg/: package.xml  setup.py
src/vision_pkg/vision_pkg/: vision_6Dpose_node.py
